syntax = "proto3";

package payment;

service PaymentService {
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  int32 id = 1;
  string name = 2;
}
